--- a/src/component/css/style.css
+++ b/src/component/css/style.css
@@ -1568,3 +1568,136 @@
       }
     }
   }
+
+@media (max-width: 450px) {
+
+  .counter-section {
+    padding: 20px 2px;
+    overflow-x: auto;
+  }
+
+  .counter-grid {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content:  flex-start;
+    align-items: stretch;
+    gap: 10px;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .counter-card {
+    flex: 0 0 140px;
+    border-radius: 15px;
+    background: #fff;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    text-align: center;
+    transition: transform 0.3s ease;
+  }
+
+  .counter-card:hover {
+    transform: translateY(-5px);
+  }
+
+  .counter-icon-wrapper {
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .counter-icon-wrapper img {
+    width: 100px !important;
+  }
+
+  .counter-content {
+    padding: 10px;
+  }
+
+  .counter-title {
+    font-size: 14px;
+    margin-bottom: 6px;
+  }
+
+  .counter-description {
+    font-size: 11px;
+    line-height: 1.4;
+    margin-bottom: 10px;
+  }
+
+  .counter-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .counter-number {
+    font-size: 12px;
+  }
+
+  .counter-button { 
+    padding: 6px 12px; 
+    font-size: 10px; 
+    width: auto; 
+    display: flex; 
+    align-items: center; 
+    gap: 1px; 
+    justify-content: center; 
+  } 
+
+  .counter-button svg { 
+    width: 1px; 
+    height: 12px; 
+  }
+
+    .feature-section {
+      padding: 10px 10px; 
+      margin-bottom: 50px;
+    }
+
+    .feature-grid {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: stretch;
+      gap: 5px;
+    }
+
+    .feature-card {
+      flex: 0 1 70px;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 5px 2px;
+      border-radius: 12px;
+      gap: 8px;
+    }
+
+    .feature-icon-wrapper {
+      width: 40px;
+      height: 40px;
+      border-radius: 10px;
+    }
+
+    .feature-icon-wrapper svg {
+      width: 20px;
+      height: 20px;
+    }
+
+    .feature-title {
+      font-size: 8px;
+      margin-bottom: 0;
+    }
+
+    .feature-text {
+      display: none; 
+    }
+
+    .skeleton-card {
+      height: 120px;
+    }
+  }
